--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <style>
-            body { font-family: Arial; padding: 10px; }
-            button { width: 100%; padding: 8px; }
+            body { font-family: Arial; padding: 5px; border-radius: 20px; background-color: #281c6f;}
+            button { width: 100%; padding: 8px; border-radius: 10px; background-color: #2c9352; color: white; border: none; cursor: pointer; }
         </style>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tabs & Windows Exporter</title>
+        <title>Tabs Exporter</title>
     </head>
     <body>
         <button id="export">Export tabs</button>
