--- a/popup.html
+++ b/popup.html
@@ -2,45 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <style>
-            * { box-sizing: border-box; }
-            html { 
-                padding: 0;
-                margin: 0;
-                min-width: 180px;
-            }
-            body { 
-                font-family: system-ui, -apple-system, sans-serif; 
-                padding: 16px; 
-                margin: 12px;
-                overflow: hidden;
-                background: rgba(56, 19, 111, 0.28);
-                backdrop-filter: blur(16px);
-                -webkit-backdrop-filter: blur(16px);
-                color: white;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-            button { 
-                width: 100px; 
-                padding: 8px; 
-                border-radius: 12px; 
-                background-color: #456cd8; 
-                box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
-                color: white; 
-                border: none; 
-                cursor: pointer; 
-                font-size: 12px;
-                font-weight: bold;
-                letter-spacing: 1px;
-                transition: background-color 0.3s ease;
-            }
-            button:hover { 
-                background-color: #2952c0; 
-                transition: transform 0.3s ease;
-            }
-        </style>
+        <link rel="stylesheet" href="popup.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tabs Exporter</title>
     </head>
